updated code with pca figs

--- a/notebooks/ExplorationNModeling/TDMv1_3.ipynb
+++ b/notebooks/ExplorationNModeling/TDMv1_3.ipynb
@@ -4375,7 +4375,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 108,
+            "execution_count": 111,
             "id": "ae2bd0e3",
             "metadata": {},
             "outputs": [
@@ -6198,7 +6198,9 @@
                 "                    title='3D PCA of Subscribed Customers Clusters',\n",
                 "                    labels={'PC1':'Principal Component 1', 'PC2':'Principal Component 2', 'PC3':'Principal Component 3'})\n",
                 "\n",
-                "fig.show()\n"
+                "fig.show()\n",
+                "\n",
+                "fig.write_image('../../reports/figures/pca_3d_clusters_kmeans.png')"
             ]
         },
         {
